--- a/dos33.html
+++ b/dos33.html
@@ -3080,7 +3080,7 @@ With that "legalese" out of the way ... enjoy the read!
 2816:AA             068             TAX
 2817:68             069             PLA
 2818:38             070             SEC
-2819:E9 26          071             SBC #<span class='n'>38</span>         ; SBUFF ADR - 38                ; <a class='magic' name='_2819'>magic number</a> HEADER_SIZE
+2819:E9 26          071             SBC #<span class='n'>38</span>         ; SBUFF ADR - 38                ; <a class='magic' name='_281A'>magic number</a> HEADER_SIZE
 281B:C8             072             INY
 281C:91 40          073             STA (ZPGWRK),Y  ; IF ADR OF NEXT TAB            ; [24] $9CD3 = $9CF7: $9A80
 281E:48             074             PHA             ; WHICH GOES INTO
