--- a/dos33.html
+++ b/dos33.html
@@ -3126,7 +3126,7 @@ With that "legalese" out of the way ... enjoy the read!
                     114 ;
                     115 <a class="f" name="MVCSW"  >MVCSW       </a>EQU *
 2851:A5 39          116             LDA INSW+<span class='n'>1</span>
-<hr>2853:CD 03 1D       117             CMP CINA+<span class='n'>1</span>
+<hr>2853:CD 03 1D       117             CMP CINA+<span class='n'>1</span>                                      ; === Page <a class="page" name="page6">6</a> ===
 2856:F0 12          118             BEQ <a class="x" href="#MVOSW">MVOSW</a>
 2858:8D 56 2A       119             STA SVINS+<span class='n'>1</span>
 285B:A5 38          120             LDA INSW        ; SAVE CHAR IN SWITCH
