--- a/dos33.html
+++ b/dos33.html
@@ -3352,7 +3352,7 @@ With that "legalese" out of the way ... enjoy the read!
                     124 ; ERROR MESSAGE TABLES
                     125 ;
                     126 <a class='d' name='EMSG'     >EMSG        </a>EQU *
-2971:0D 07 8D       127             DFB $<span class='n'>0D</span>, $<span class='n'>07</span>, $<span class='n'>8D</span>                               ; <a class='magic' name='_'>magic number</a> CR, BELL, CR + #$80
+2971:0D 07 8D       127             DFB $<span class='n'>0D</span>, $<span class='n'>07</span>, $<span class='n'>8D</span>                               ; <a class='magic' name='_2971'>magic number</a> CR, BELL, CR + #$80
                     128 <a class='d' name='EM1'      >EM1         </a>EQU *-<a class='v' name='EMSG'>EMSG</a>
 2974:4C 41 4E 47    129             DCI "LANGUAGE NOT AVAILABLE"
 2978:55 41 47 45
