--- a/dos33.html
+++ b/dos33.html
@@ -5845,7 +5845,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     426 <a class='d' name='FDNSA'    >FDNSA       </a>DS  1           ; NO SECTORS ALLOCATED              ; [03] <a class='struct' name='_3803'>wastes</a> 1 byte -- never referenced!
                     427 <a class='d' name='FDLSDL'   >FDLSDL      </a>DS  1           ; LAST SECTOR DATA LENGTH           ; [04] <a class='struct' name='_3804'>wastes</a> 1 byte -- never referenced!
                     428 <a class='d' name='FDFRS'    >FDFRS       </a>DS  2           ; 1ST RELATIVE SECTOR IN THIS DIR   ; [05] read by <a class='x' href='#RFDNL1'>RFDNL1</a> and <a class='x' href='#RDFDC'>RDFDC</a> in FMTRWIO
-<hr>                    429 <a class='d' name='FDSPAR'   >FDSPAR      </a>DS  5           ; SPARES                            ; [07]
+<hr>                    429 <a class='d' name='FDSPAR'   >FDSPAR      </a>DS  5           ; SPARES                            ; [07] === Page <a class='page' name='page15'>15</a> ===
                     430 ;
                     431 <a class='d' name='FDENT'    >FDENT       </a>DS  1           ; START OF FILE ENTRIES (122)       ; [0C]
                     432 <a class='e' name='FDTRK'    >FDTRK       </a>EQU 0           ; TRACK
